--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Travay</title>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 </head>
 <body>
 <div id="app"></div>
