--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Travay</title>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
+  <script src="//www.socialintents.com/api/socialintents.1.3.js#2c9fa56365b664f10165bbd7d92d0134"
+          async="async"></script>
 </head>
 <body>
 <div id="app"></div>
