updated translations, reorged image folder, WIP implementing PWA, WIP creating a dictionary page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="manifest" href="static/manifest.json" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Travay</title>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app" content="Travay">
+  <link rel="apple-touch-icon" href="static/logo/icon-144x144.png" />
+
+  <meta name="msapplication-TileImage" content="/static/icons/144.png">
+  <meta name="msapplication-TileColor" content="#000">
+
+  <title>Travay</title>
 
 </head>
 <body>
@@ -21,3 +30,6 @@
 mixpanel.init("4be6f13d7bef9dab00a44273cade05a3");</script><!-- end Mixpanel -->
 </body>
 </html>
+
+
+<!--https://youtu.be/7QBUwqXO9dA?t=5m40s-->
