--- a/index.html
+++ b/index.html
@@ -17,12 +17,40 @@
 
   <title>Travay</title>
 
+  <!-- Start of Async Drift Code -->
+  <script>
+    "use strict";
+
+    !function() {
+      var t = window.driftt = window.drift = window.driftt || [];
+      if (!t.init) {
+        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+          t.factory = function(e) {
+            return function() {
+              var n = Array.prototype.slice.call(arguments);
+              return n.unshift(e), t.push(n), t;
+            };
+          }, t.methods.forEach(function(e) {
+          t[e] = t.factory(e);
+        }), t.load = function(t) {
+          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+          var i = document.getElementsByTagName("script")[0];
+          i.parentNode.insertBefore(o, i);
+        };
+      }
+    }();
+    drift.SNIPPET_VERSION = '0.3.1';
+    drift.load('uk7fiuzsery4');
+  </script>
+  <!-- End of Async Drift Code -->
+
 </head>
 <body>
 <div id="app"></div>
-<!-- built files will be auto injected -->
-<script src="//www.socialintents.com/api/socialintents.1.3.js#2c9fa56365b664f10165bbd7d92d0134"
-        async="async"></script>
+<!--<script src="//www.socialintents.com/api/socialintents.1.3.js#2c9fa56365b664f10165bbd7d92d0134"-->
+        <!--async="async"></script>-->
 <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
 </body>
 </html>
