--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="manifest" href="static/manifest.json" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
+  <link rel="manifest" href="/static/manifest.json" />
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app" content="Travay">
-  <link rel="apple-touch-icon" href="static/logo/icon-144x144.png" />
+  <link rel="apple-touch-icon" href="/static/logo/icon-144x144.png" />
 
   <meta name="msapplication-TileImage" content="/static/icons/144.png">
   <meta name="msapplication-TileColor" content="#000">
