--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
   <link rel="manifest" href="/static/manifest.json" />
+
+  <meta name="theme-color" content="#000">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -16,9 +18,11 @@
   <meta name="msapplication-TileColor" content="#000">
 
   <title>Travay</title>
-
 </head>
 <body>
+    <noscript>
+        This is your fallback content in case JavaScript fails to load.
+    </noscript>
 <div id="app"></div>
 <!-- Start of Async Drift Code -->
 <script>
