Check comment on line 17 index.html file

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app" content="Travay">
   <link rel="apple-touch-icon" href="static/logo/icon-144x144.png" />
-
+  <
   <meta name="msapplication-TileImage" content="/static/icons/144.png">
   <meta name="msapplication-TileColor" content="#000">
-
+  <!-- check your browswe version -->
   <title>Travay</title>
 
 </head>
